--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,14 @@ jobs:
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
+          haxelib git extension-webm https://github.com/KadeDev/extension-webm
+          haxelib run lime rebuild extension-webm linux
+          haxelib install polymod
+          haxelib install newgrounds
+          haxelib git faxe https://github.com/uhrobots/faxe
+          haxelib install linc_luajit
+          haxelib install actuate                                                                                             
+          haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit
           haxelib list
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
@@ -88,6 +96,14 @@ jobs:
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
+          haxelib git extension-webm https://github.com/KadeDev/extension-webm
+          haxelib run lime rebuild extension-webm windows
+          haxelib install polymod
+          haxelib install newgrounds
+          haxelib git faxe https://github.com/uhrobots/faxe
+          haxelib install linc_luajit
+          haxelib install actuate                                                                                             
+          haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit
           haxelib list
         shell: cmd
       - name: Create Version Tag
@@ -100,7 +116,7 @@ jobs:
           name: windowsBuild
           path: export/release/windows/bin
   buildMac:
-    runs-on: macos-latest
+    runs-on: macOS-10.15
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -129,6 +145,14 @@ jobs:
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
+          haxelib git extension-webm https://github.com/KadeDev/extension-webm
+          haxelib run lime rebuild extension-webm mac
+          haxelib install polymod
+          haxelib install newgrounds
+          haxelib git faxe https://github.com/uhrobots/faxe
+          haxelib install linc_luajit
+          haxelib install actuate                                                                                             
+          haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit
           haxelib list
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
